; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_ion.c_add_package_search_path_range.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_ion.c_add_package_search_path_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_package_search_path_range(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32, i32* @MAX_PATH, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %5, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %6, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = ptrtoint i8* %12 to i64
  %15 = ptrtoint i8* %13 to i64
  %16 = sub i64 %14, %15
  %17 = trunc i64 %16 to i32
  %18 = load i32, i32* @MAX_PATH, align 4
  %19 = sub nsw i32 %18, 1
  %20 = call i64 @CLAMP_MAX(i32 %17, i32 %19)
  store i64 %20, i64* %7, align 8
  %21 = load i8*, i8** %3, align 8
  %22 = load i64, i64* %7, align 8
  %23 = call i32 @memcpy(i8* %11, i8* %21, i64 %22)
  %24 = load i64, i64* %7, align 8
  %25 = getelementptr inbounds i8, i8* %11, i64 %24
  store i8 0, i8* %25, align 1
  %26 = call i32 @add_package_search_path(i8* %11)
  %27 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %27)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @CLAMP_MAX(i32, i32) #2

declare dso_local i32 @memcpy(i8*, i8*, i64) #2

declare dso_local i32 @add_package_search_path(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
